--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -16,12 +18,12 @@
 </head>
 
 <body>
-    <div>
-        <div>
-
+    <main class="container">
+        <div class="left-column">
+            LEFT
         </div>
-        <div>
-            ]
+        <div class="right-column">
+            RIGHT
         </div>
 </body>
 
