--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 <body>
     <main class="container">
         <div class="left-column">
-            LEFT
+           <h2 class="main-title"> Sign Up</h2>
+           <footer class="bottom-links">
+               <a href="#">Privacy policy</a>
+               &amp;
+               <a href="#"> terms of service</a>
+           </footer>
         </div>
         <div class="right-column">
             RIGHT
